--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.png binary
-*.jpg binary
-*.gif binary
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
